# Gamepad-Overlay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/dualshock_black/: credit  placement.json
forms/: mainwindow.ui  overlay.ui
include/: devicemanager.h  dualshock.h  mainwindow.h  overlay.h
libs/: devicemanager.cpp  dualshock.cpp  mainwindow.cpp  overlay.cpp
